[gd_scene load_steps=7 format=2]

[ext_resource path="res://levels.gd" type="Script" id=1]
[ext_resource path="res://sprits/sprits/levels.png" type="Texture" id=2]
[ext_resource path="res://sprits/backgrownd.png" type="Texture" id=3]
[ext_resource path="res://sprits/player/idle/adventurer-idle-00.png" type="Texture" id=4]
[ext_resource path="res://sprits/sprits/back.png" type="Texture" id=5]
[ext_resource path="res://assets/sound/02 - BWV 1007 - Prelude.ogg" type="AudioStream" id=6]

[node name="levels" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="levels" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -915.525
margin_top = -277.689
margin_right = -310.525
margin_bottom = -163.689
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 960.003, 600.03 )
texture = ExtResource( 3 )

[node name="adventurer-idle-00" type="Sprite" parent="."]
position = Vector2( 1376.96, 551.973 )
scale = Vector2( 25.2011, 27.6681 )
texture = ExtResource( 4 )

[node name="back" type="TextureButton" parent="."]
margin_left = 1246.91
margin_top = 1008.74
margin_right = 1715.91
margin_bottom = 1131.74
texture_normal = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
mix_target = 1
[connection signal="mouse_entered" from="levels" to="." method="_on_levels_mouse_entered"]
[connection signal="mouse_exited" from="levels" to="." method="_on_levels_mouse_exited"]
[connection signal="pressed" from="levels" to="." method="_on_levels_pressed"]
[connection signal="mouse_entered" from="back" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="back" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="back" to="." method="_on_TextureButton_pressed"]
